fix jump to present bar

--- a/main.css
+++ b/main.css
@@ -269,6 +269,13 @@ body,
     /*add back margin to emoji button*/
     margin-right: 5px !important;
 }
+
+.jumpToPresentBar-9P20AM {
+    padding-bottom: 0px;
+}
+.form-2fGMdU:before {
+    display: none;
+}
 .jumpToPresentBar-9P20AM,
 .searchBar-3dMhjb,
 .searchBarComponent-32dTOx,
